--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 <!-- scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.js"></script>
-<script src="js/app.js"></script>
+<script src="./js/app.js"></script>
 
 </body>
 </html>
