--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div class="panel">
     <h1 class="text-panel">PapaJool</h1>
     <div class="d-grid gap-2 col-7 mx-auto">
-      <a class="btn btn-primary" href="https://github.com/PapaJool/site-x-2" role="button"><h4 class="text-panel">Site X^2</h4></a>
-      <a class="btn btn-warning" href="https://github.com/PapaJool/Clock-JS" role="button"><h4 class="text-panel">Clock</h4></a>
-      <a class="btn btn-success" href="https://github.com/PapaJool/T-rex" role="button"><h4 class="text-panel">T-Rex</h4></a>
-      <a class="btn btn-danger" href="https://github.com/PapaJool/PacMan" role="button"><h4 class="text-panel">PacMan</h4></a>
+      <a class="btn btn-primary" href="site-x-2-main/index.html" role="button"><h4 class="text-panel">Site X^2</h4></a>
+      <a class="btn btn-warning" href="Clock-JS-main/index.html" role="button"><h4 class="text-panel">Clock</h4></a>
+      <a class="btn btn-success" href="T-rex-main/index.html" role="button"><h4 class="text-panel">T-Rex</h4></a>
+      <a class="btn btn-danger" href="PacMan-main/index.html" role="button"><h4 class="text-panel">PacMan</h4></a>
     </div>
     <a href="https://github.com/PapaJool"><img id="git" src="images/25231.png"></a>
     <a href="https://vk.com/shakirowkamil"><img id="vk" src="images/vk.png"></a>
